--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <title>Guess My Number!</title>
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    /> -->
   </head>
 
   <body>
     <header>
       <h1>Guess My Number!</h1>
       <p class="between">(Between 1 and 20)</p>
-      <button class="btn again">Again!</button>
+      <button class="btn again fixed-bottom againSt">Again!</button>
       <div class="number">?</div>
     </header>
     <main>
       <section class="left">
         <input type="number" class="guess" />
         <button class="btn check">Thử máu!</button>
+        <button class="btn again agEnd">Làm lại...</button>
       </section>
       <section class="right">
         <p class="message">Đoán xem...</p>
